# blog-harness

./: AGENTS.md  IMPLEMENTATION_PLAN.md  PDD.md  pyproject.toml
.agents/: README.md
.agents/rules/: 00-architecture-invariants.md  01-python-uv-workspace.md  02-adk-agent-patterns.md  03-contracts-first.md  04-ports-and-di.md  05-observability-mandatory.md  06-testing-and-evals.md  07-manager-guardrail.md  08-naming-style-commits.md
.agents/skills/add-eval-case/: SKILL.md
.agents/skills/add-loop-exit-checker/: SKILL.md
.agents/skills/add-or-change-contract/: SKILL.md
.agents/skills/adding_eval_cases/: SKILL.md
.agents/skills/adding_loop_exit_checkers/: SKILL.md
.agents/skills/adding_or_changing_contracts/: SKILL.md
.agents/skills/creating_skills/: SKILL.md
.agents/skills/creating_skills/assets/: template.md
.agents/skills/run-testmode-pipeline/: SKILL.md
.agents/skills/running_testmode_pipeline/: SKILL.md
.agents/skills/scaffold-specialist/: SKILL.md
.agents/skills/scaffolding_specialists/: SKILL.md
apps/web/: .gitkeep
deploy/gcp/: .gitkeep
notes/: PF-preflight-semantics.md  T-0.0-agent-md.md  T-0.1-3-agent-tree.md  T-0.3-standardize-skills.md  T-M0.1-uv-workspace.md
services/bff/: pyproject.toml
services/bff/src/bff/: __init__.py
services/conductor/: pyproject.toml
services/conductor/src/conductor/: __init__.py
services/notification/: pyproject.toml
services/optimizer/: pyproject.toml
services/specialists/: .gitkeep
src/blog_harness/: __init__.py
tools/mock/: .gitkeep
tools/real/: .gitkeep
(+1 files in other folders)
