[project]
name = "conductor"
version = "0.1.0"
description = "Conductor orchestration service"
requires-python = ">=3.12"
dependencies = [
    "blog-contracts",
    "blog-platform",
    "blog-observability",
    "blog-agent-kit",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
